// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`advanced 1`] = `
Object {
  "advancedRequirements": Array [
    Object {
      "id": "[ID]",
      "level": "advanced",
      "name": "invite_users",
      "priority": 100,
      "required_count": 12,
    },
  ],
}
`;

exports[`advanced 2`] = `
Object {
  "newbieRequirements": Array [],
}
`;

exports[`advanced 3`] = `
Object {
  "newbie": Object {
    "user_achieved": true,
  },
}
`;

exports[`advanced 4`] = `
Object {
  "advanced": Object {
    "user_achieved": false,
  },
}
`;

exports[`advanced part II 1`] = `
Object {
  "advancedRequirements": Array [
    Object {
      "id": "[ID]",
      "level": "advanced",
      "name": "invite_users",
      "priority": 100,
      "required_count": 12,
    },
    Object {
      "id": "[ID]",
      "level": "advanced",
      "name": "complete_action",
      "priority": 100,
      "required_count": 5,
    },
    Object {
      "id": "[ID]",
      "level": "advanced",
      "name": "apply_for_verifier",
      "priority": 100,
      "required_count": 1,
    },
    Object {
      "id": "[ID]",
      "level": "advanced",
      "name": "create_action",
      "priority": 100,
      "required_count": 2,
    },
  ],
}
`;

exports[`advanced part II 2`] = `
Object {
  "newbieRequirements": Array [],
}
`;

exports[`advanced part II 3`] = `
Object {
  "newbie": Object {
    "user_achieved": true,
  },
}
`;

exports[`advanced part II 4`] = `
Object {
  "advanced": Object {
    "user_achieved": false,
  },
}
`;

exports[`advanced part III 1`] = `
Object {
  "advancedRequirements": Array [],
}
`;

exports[`advanced part III 2`] = `
Object {
  "newbieRequirements": Array [],
}
`;

exports[`advanced part III 3`] = `
Object {
  "newbie": Object {
    "user_achieved": true,
  },
}
`;

exports[`advanced part III 4`] = `
Object {
  "advanced": Object {
    "user_achieved": true,
  },
}
`;

exports[`newbie 1`] = `
Object {
  "advancedRequirements": Array [
    Object {
      "id": "[ID]",
      "level": "advanced",
      "name": "invite_users",
      "priority": 100,
      "required_count": 15,
    },
    Object {
      "id": "[ID]",
      "level": "advanced",
      "name": "complete_action",
      "priority": 100,
      "required_count": 12,
    },
  ],
}
`;

exports[`newbie 2`] = `
Object {
  "newbieRequirements": Array [
    Object {
      "id": "[ID]",
      "level": "newbie",
      "name": "upload_profile_image",
      "priority": 100,
      "required_count": 1,
    },
    Object {
      "id": "[ID]",
      "level": "newbie",
      "name": "complete_action",
      "priority": 100,
      "required_count": 2,
    },
  ],
}
`;

exports[`newbie 3`] = `
Object {
  "newbie": Object {
    "user_achieved": false,
  },
}
`;

exports[`newbie 4`] = `
Object {
  "advanced": Object {
    "user_achieved": false,
  },
}
`;
